aligning pieces better

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,9 @@
             </div>
             <div class="col-md-6">
                 <h2 class="text-center"><span>Player</span></h2>
-                <ul id="songPlayer" class="d-flex justify-content-center align-items-center"></ul>
+                <div class="mb-3">
+                    <ul id="songPlayer" class="d-flex justify-content-center align-items-center"></ul>
+                </div>
             </div>
         </div>
     </div>
